# abdulazeez-portfolio

./: .gitignore  README.md  data.json  datas.json  index.html  pyproject.toml  requirements.txt  seed.py  trial.py  visit_log.json
app/: __init__.py  models.py  routes.py
app/static/css/: style.css
app/templates/: 404.html  base.html  contact.html  dashboard.html  experience_form.html  inbox.html  index.html  login.html  manage_experience.html  manage_skills.html  project_detail.html  project_form.html  projects.html  role_form.html  settings.html  skill_form.html
